test: 방문 API 테스트 코드 및 index.adoc 업데이트
- 방문 API 관련 수정으로 테스트 코드 수정
- index.adoc 문서 스니펫 반영