@@ -2,30 +2,33 @@ package com.minlab.hospital.presentation;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.minlab.hospital.application.service.VisitService;
-import com.minlab.hospital.domain.entity.Hospital;
-import com.minlab.hospital.domain.entity.Patient;
-import com.minlab.hospital.domain.entity.Visit;
 import com.minlab.hospital.presentation.controller.VisitController;
+import com.minlab.hospital.presentation.dto.request.VisitRequestDto;
+import com.minlab.hospital.presentation.dto.response.VisitResponseDto;
+import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.restdocs.AutoConfigureRestDocs;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.http.MediaType;
+import org.springframework.restdocs.mockmvc.RestDocumentationRequestBuilders;
+import org.springframework.restdocs.operation.preprocess.Preprocessors;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
+import java.util.regex.Pattern;
 
-import static org.hamcrest.Matchers.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
+import static org.springframework.restdocs.payload.PayloadDocumentation.*;
+import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(VisitController.class)
+@AutoConfigureRestDocs
 class VisitControllerTest {
 
     @Autowired
@@ -37,150 +40,265 @@ class VisitControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    private Visit registerSampleVisit(Long id) {
-        Hospital hospital = Hospital.builder()
-                .id(1L)
-                .name("서울병원")
-                .doctorName("김닥터")
-                .providerNumber("1100001234")
-                .build();
+    private VisitRequestDto visitRequestDto() {
+        VisitRequestDto dto = new VisitRequestDto();
+        dto.setVisitDate(LocalDateTime.of(2025, 8, 27, 14, 30));
+        dto.setVisitStatus("방문중");
+        dto.setVisitType("외래");
+        dto.setVisitCategory("안과");
+        return dto;
+    }
 
-        Patient patient = Patient.builder()
-                .id(1L)
-                .name("홍길동")
-                .patientNumber("P123")
-                .gender("M")
-                .build();
-
-        return Visit.builder()
-                .id(id)
-                .hospital(hospital)
-                .patient(patient)
-                .visitDate(LocalDateTime.now())
-                .visitStatus("진행중")
-                .visitType("외래")
-                .build();
+    private VisitResponseDto visitResponseDto(Long id, Long patientId) {
+        return new VisitResponseDto(
+                id,
+                1L,
+                patientId,
+                "001-00001",
+                LocalDateTime.of(2025, 8, 27, 14, 30),
+                "방문중",
+                "외래"
+        );
     }
 
     @Test
     @DisplayName("방문 등록 성공")
     void registerVisit_success() throws Exception {
-        Visit visit = registerSampleVisit(1L);
+        var req = visitRequestDto();
+        var res = visitResponseDto(1L, 1L);
 
-        Mockito.when(visitService.registerVisit(anyLong(), anyLong(), any(Visit.class)))
-                .thenReturn(visit);
+        Mockito.when(visitService.registerVisit(anyLong(), any(VisitRequestDto.class)))
+                .thenReturn(res);
 
-        mockMvc.perform(post("/api/visits/hospital/1/patient/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(visit)))
+        mockMvc.perform(RestDocumentationRequestBuilders
+                        .post("/api/patients/{patientId}/visits", 1L)
+                        .contentType("application/json")
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.visitStatus", is("진행중")));
+                .andDo(document("visit-register-success",
+                        pathParameters(
+                                parameterWithName("patientId").description("환자 ID")
+                        ),
+                        requestFields(
+                                fieldWithPath("visitDate").description("방문 일시"),
+                                fieldWithPath("visitStatus").description("방문 상태"),
+                                fieldWithPath("visitType").description("방문 유형"),
+                                fieldWithPath("visitCategory").description("진료 과목 코드")
+                        ),
+                        responseFields(
+                                fieldWithPath("id").description("방문 ID"),
+                                fieldWithPath("hospitalId").description("병원 ID"),
+                                fieldWithPath("patientId").description("환자 ID"),
+                                fieldWithPath("patientNumber").description("환자 번호"),
+                                fieldWithPath("visitDate").description("방문 일시"),
+                                fieldWithPath("visitStatus").description("방문 상태"),
+                                fieldWithPath("visitType").description("방문 유형")
+                        )
+                ));
     }
 
     @Test
-    @DisplayName("방문 등록 실패 (병원 없음)")
-    void registerVisit_fail_hospitalNotFound() throws Exception {
-        Visit visit = registerSampleVisit(null);
+    @DisplayName("방문 등록 실패 - 환자 없음")
+    void registerVisit_fail() throws Exception {
+        var req = visitRequestDto();
 
-        Mockito.when(visitService.registerVisit(anyLong(), anyLong(), any(Visit.class)))
-                .thenThrow(new IllegalArgumentException("해당 병원을 찾을 수 없습니다."));
+        Mockito.when(visitService.registerVisit(anyLong(), any(VisitRequestDto.class)))
+                .thenThrow(new EntityNotFoundException("해당 환자를 찾을 수 없습니다."));
 
-        mockMvc.perform(post("/api/visits/hospital/999/patient/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(visit)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.error").value("Bad Request"))
-                .andExpect(jsonPath("$.message").value("해당 병원을 찾을 수 없습니다."));
+        mockMvc.perform(RestDocumentationRequestBuilders
+                        .post("/api/patients/{patientId}/visits", 999L)
+                        .contentType("application/json")
+                        .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isNotFound())
+                .andDo(document("visit-register-fail",
+                        responseFields(
+                                fieldWithPath("status").description("HTTP 상태 코드"),
+                                fieldWithPath("error").description("에러 유형"),
+                                fieldWithPath("message").description("에러 메시지"),
+                                fieldWithPath("timestamp").description("에러 발생 시각")
+                        )
+                ));
     }
+
 
     @Test
     @DisplayName("방문 수정 성공")
     void updateVisit_success() throws Exception {
-        Visit updateInfo = registerSampleVisit(1L);
-        updateInfo.setVisitStatus("종료");
+        var req = visitRequestDto();
+        var res = visitResponseDto(1L, 1L);
 
-        Mockito.when(visitService.updateVisit(anyLong(), any(Visit.class)))
-                .thenReturn(updateInfo);
+        Mockito.when(visitService.updateVisit(anyLong(), any(VisitRequestDto.class)))
+                .thenReturn(res);
 
-        mockMvc.perform(put("/api/visits/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updateInfo)))
+        mockMvc.perform(RestDocumentationRequestBuilders.put("/api/patients/{patientId}/visits/{visitId}", 1L, 1L)
+                        .contentType("application/json")
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.visitStatus", is("종료")));
+                .andDo(document("visit-update-success",
+                        pathParameters(
+                                parameterWithName("patientId").description("환자 ID"),
+                                parameterWithName("visitId").description("방문 ID")
+                        ),
+                        requestFields(
+                                fieldWithPath("visitDate").description("방문 일시"),
+                                fieldWithPath("visitStatus").description("방문 상태"),
+                                fieldWithPath("visitType").description("방문 유형"),
+                                fieldWithPath("visitCategory").description("진료 과목 코드")
+                        ),
+                        responseFields(
+                                fieldWithPath("id").description("방문 ID"),
+                                fieldWithPath("hospitalId").description("병원 ID"),
+                                fieldWithPath("patientId").description("환자 ID"),
+                                fieldWithPath("patientNumber").description("환자 번호"),
+                                fieldWithPath("visitDate").description("방문 일시"),
+                                fieldWithPath("visitStatus").description("방문 상태"),
+                                fieldWithPath("visitType").description("방문 유형")
+                        )
+                ));
     }
 
     @Test
-    @DisplayName("방문 수정 실패 (존재하지 않음)")
-    void updateVisit_fail_notFound() throws Exception {
-        Visit updateInfo = registerSampleVisit(null);
+    @DisplayName("방문 수정 실패 - 없는 방문")
+    void updateVisit_fail() throws Exception {
+        var req = visitRequestDto();
 
-        Mockito.when(visitService.updateVisit(anyLong(), any(Visit.class)))
-                .thenThrow(new IllegalArgumentException("해당 방문을 찾을 수 없습니다."));
+        Mockito.when(visitService.updateVisit(anyLong(), any(VisitRequestDto.class)))
+                .thenThrow(new EntityNotFoundException("해당 방문 기록을 찾을 수 없습니다."));
 
-        mockMvc.perform(put("/api/visits/999")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updateInfo)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.error").value("Bad Request"))
-                .andExpect(jsonPath("$.message").value("해당 방문을 찾을 수 없습니다."));
+        mockMvc.perform(RestDocumentationRequestBuilders.put("/api/patients/{patientId}/visits/{visitId}", 1L, 999L)
+                        .contentType("application/json")
+                        .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isNotFound())
+                .andDo(document("visit-update-fail",
+                        responseFields(
+                                fieldWithPath("status").description("HTTP 상태 코드"),
+                                fieldWithPath("error").description("에러 유형"),
+                                fieldWithPath("message").description("에러 메시지"),
+                                fieldWithPath("timestamp").description("에러 발생 시각")
+                        )
+                ));
     }
 
     @Test
     @DisplayName("방문 삭제 성공")
     void deleteVisit_success() throws Exception {
-        mockMvc.perform(delete("/api/visits/1"))
-                .andExpect(status().isNoContent());
+        mockMvc.perform(RestDocumentationRequestBuilders.delete("/api/patients/{patientId}/visits/{visitId}", 1L, 1L))
+                .andExpect(status().isNoContent())
+                .andDo(document("visit-delete-success",
+                        pathParameters(
+                                parameterWithName("patientId").description("환자 ID"),
+                                parameterWithName("visitId").description("방문 ID")
+                        )
+                ));
     }
 
     @Test
-    @DisplayName("방문 삭제 실패 (존재하지 않음)")
-    void deleteVisit_fail_notFound() throws Exception {
-        Mockito.doThrow(new IllegalArgumentException("해당 방문을 찾을 수 없습니다."))
-                .when(visitService).deleteVisit(anyLong());
+    @DisplayName("방문 삭제 실패 - 없는 방문")
+    void deleteVisit_fail() throws Exception {
+        Mockito.doThrow(new EntityNotFoundException("해당 방문 기록을 찾을 수 없습니다."))
+                .when(visitService).deleteVisit(999L);
 
-        mockMvc.perform(delete("/api/visits/999"))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.error").value("Bad Request"))
-                .andExpect(jsonPath("$.message").value("해당 방문을 찾을 수 없습니다."));
+        mockMvc.perform(RestDocumentationRequestBuilders.delete("/api/patients/{patientId}/visits/{visitId}", 1L, 999L))
+                .andExpect(status().isNotFound())
+                .andDo(document("visit-delete-fail",
+                        responseFields(
+                                fieldWithPath("status").description("HTTP 상태 코드"),
+                                fieldWithPath("error").description("에러 유형"),
+                                fieldWithPath("message").description("에러 메시지"),
+                                fieldWithPath("timestamp").description("에러 발생 시각")
+                        )
+                ));
     }
 
     @Test
     @DisplayName("방문 단건 조회 성공")
-    void getVisitById_success() throws Exception {
-        Visit visit = registerSampleVisit(1L);
+    void getVisit_success() throws Exception {
+        var res = visitResponseDto(1L, 1L);
 
-        Mockito.when(visitService.getVisit(1L)).thenReturn(visit);
+        Mockito.when(visitService.getVisit(1L)).thenReturn(res);
 
-        mockMvc.perform(get("/api/visits/1"))
+        mockMvc.perform(RestDocumentationRequestBuilders.get("/api/patients/{patientId}/visits/{visitId}", 1L, 1L))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.visitStatus", is("진행중")));
+                .andDo(document("visit-get-success",
+                        pathParameters(
+                                parameterWithName("patientId").description("환자 ID"),
+                                parameterWithName("visitId").description("방문 ID")
+                        ),
+                        responseFields(
+                                fieldWithPath("id").description("방문 ID"),
+                                fieldWithPath("hospitalId").description("병원 ID"),
+                                fieldWithPath("patientId").description("환자 ID"),
+                                fieldWithPath("patientNumber").description("환자 번호"),
+                                fieldWithPath("visitDate").description("방문 일시"),
+                                fieldWithPath("visitStatus").description("방문 상태"),
+                                fieldWithPath("visitType").description("방문 유형")
+                        )
+                ));
     }
 
     @Test
-    @DisplayName("방문 단건 조회 실패 (존재하지 않음)")
-    void getVisitById_fail_notFound() throws Exception {
-        Mockito.when(visitService.getVisit(anyLong()))
-                .thenThrow(new IllegalArgumentException("해당 방문을 찾을 수 없습니다."));
+    @DisplayName("방문 조회 실패 - 없는 방문")
+    void getVisit_fail() throws Exception {
+        Mockito.when(visitService.getVisit(999L))
+                .thenThrow(new EntityNotFoundException("해당 방문 기록을 찾을 수 없습니다."));
 
-        mockMvc.perform(get("/api/visits/999"))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.error").value("Bad Request"))
-                .andExpect(jsonPath("$.message").value("해당 방문을 찾을 수 없습니다."));
+        mockMvc.perform(RestDocumentationRequestBuilders.get("/api/patients/{patientId}/visits/{visitId}", 1L, 999L))
+                .andExpect(status().isNotFound())
+                .andDo(document("visit-get-fail",
+                        responseFields(
+                                fieldWithPath("status").description("HTTP 상태 코드"),
+                                fieldWithPath("error").description("에러 유형"),
+                                fieldWithPath("message").description("에러 메시지"),
+                                fieldWithPath("timestamp").description("에러 발생 시각")
+                        )
+                ));
     }
 
     @Test
-    @DisplayName("방문 전체 조회 성공")
-    void getAllVisits_success() throws Exception {
-        List<Visit> visits = Arrays.asList(
-                registerSampleVisit(1L),
-                registerSampleVisit(2L)
+    @DisplayName("환자별 방문 전체 조회 성공")
+    void getAllVisitsByPatient_success() throws Exception {
+        var resList = List.of(
+                visitResponseDto(1L, 1L),
+                visitResponseDto(2L, 1L)
         );
 
-        Mockito.when(visitService.getAllVisits()).thenReturn(visits);
+        Mockito.when(visitService.getVisitsByPatient(1L))
+                .thenReturn(resList);
 
-        mockMvc.perform(get("/api/visits"))
+        mockMvc.perform(RestDocumentationRequestBuilders.get("/api/patients/{patientId}/visits", 1L))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()", is(2)));
+                .andDo(document("visit-get-all-success",
+                        pathParameters(
+                                parameterWithName("patientId").description("환자 ID")
+                        ),
+                        responseFields(
+                                fieldWithPath("[].id").description("방문 ID"),
+                                fieldWithPath("[].hospitalId").description("병원 ID"),
+                                fieldWithPath("[].patientId").description("환자 ID"),
+                                fieldWithPath("[].patientNumber").description("환자 번호"),
+                                fieldWithPath("[].visitDate").description("방문 일시"),
+                                fieldWithPath("[].visitStatus").description("방문 상태"),
+                                fieldWithPath("[].visitType").description("방문 유형")
+                        )
+                ));
     }
+
+    @Test
+    @DisplayName("환자별 방문 전체 조회 실패 - 환자 없음")
+    void getAllVisitsByPatient_fail() throws Exception {
+        Mockito.when(visitService.getVisitsByPatient(999L))
+                .thenThrow(new EntityNotFoundException("해당 환자를 찾을 수 없습니다."));
+
+        mockMvc.perform(RestDocumentationRequestBuilders.get("/api/patients/{patientId}/visits", 999L))
+                .andExpect(status().isNotFound())
+                .andDo(document("visit-get-all-fail",
+                        responseFields(
+                                fieldWithPath("status").description("HTTP 상태 코드"),
+                                fieldWithPath("error").description("에러 유형"),
+                                fieldWithPath("message").description("에러 메시지"),
+                                fieldWithPath("timestamp").description("에러 발생 시각")
+                        )
+                ));
+    }
+
 }
